--- a/jonathan_ojeda/index.html
+++ b/jonathan_ojeda/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>My Blog | Jonathan Ojeda</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Dev'Coffee PWA | Jonathan Ojeda</title>
 </head>
+
 <body>
-	<h1>Hi!! :V</h1>
+    <main>
+        <nav>
+            <h1>Dev'Coffee</h1>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Blog</li>
+            </ul>
+        </nav>
+        <div class="container"></div>
+    </main>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
